[metadata]
name = jupyterhub_moss
version = attr: jupyterhub_moss.version
author = European Synchrotron Radiation Facility
author_email = jupyter@esrf.fr
description = JupyterHub SLURM Spawner with specific spawn page
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/silx-kit/jupyterhub_moss
keywords = jupyterhub,slurm
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Jupyter
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: JavaScript

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    batchspawner>=1.0
    jinja2
    jupyterhub
    traitlets

[options.extras_require]
dev =
    black
    build
    bump2version
    check-manifest
    flake8
    jupyter_server
    mypy
    pytest
    pytest-asyncio

# E501 (line too long) ignored
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
